--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="content">
       <div id="stratheadwrap">
         <div id="starthead">
-          <h1 class="main" data-text="hocus pocus focus mocus">hocus pocus focus mocus</h1>
+          <h1 class="main" data-text="focus focus">focus focus</h1>
           <p>Where you going buddy?</p>
           <p>You can't run from us.</p>
           <p>We know that you wanna get off your work.</p>
@@ -22,7 +22,7 @@
         </div>
         </div>
     </div>
-    <div class="sliding-background"></div>
+    <img class="sliding-background" src="https://unsplash.com/photos/G8-T_KvJCe4"></img>
 </div>
 <div class="tooltip">
     <span class="dot"></span>
